--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     crossorigin="anonymous"
   >
   
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/Flipper-Connect/style.css" />
+  
 </head>
 <body>
   <header class="container">
@@ -26,9 +27,7 @@
     <section>
       <h2>Phase 1: Flipper Explorer</h2>
       <div class="grid grid-connect">
-        
         <button id="btnConnect" class="contrast">Mit Flipper verbinden</button>
-        
         <button id="btnDisconnect" class="secondary" disabled>Trennen</button>
         <span id="connState" class="state">Getrennt</span>
       </div>
